0.5 (dev)
- Log4j2 instead of Slf4j

0.4
- added URL to request(..)
- Java 8
- commons updated

0.3
- improved proxy ips and hostnames

0.2
- body(String, Charset) added

0.1
- Initial release